# zmq_examples

./: .gitignore  LICENSE  README.md
Majordomo/: Makefile  mdbroker.c  mdcliapi.c  mdcliapi2.c  mdworker.c  mdwrkapi.c
Pirates/: Makefile  lpclient.c  lpclient_API4.c  lpserver.c  lpserver_API4.c  ppqueue.c  ppqueue_API4.c  ppworker.c  ppworker_API4.c  spqueue.c  spqueue_API4.c  spworker.c  spworker_API4.c  test.sh  test_API4.sh
Worked_Example/: CMakeLists.txt  Makefile  peering1.c  peering1_API4.c  peering2.c  peering2_API4.c  peering3.c  peering3_API4.c  test1.sh  test1_API4.sh  test2.sh  test2_API4.sh  test3.sh  test3_API4.sh
